@@ -10,6 +10,7 @@ ChangeLog for ARQ
 + Remove the partial migration support for old-style SPARQL submission update forms.
 + Update Turtle/Trig parsers for prefixed name details in RDF 1.1
   Add %-sequences, \char sequences and ':' to local part of prefixed names.
+  NB.  The characters 123. are now an integer 123 and a DOT; they were a decimal, and no DOT.  
 
 ==== ARQ 2.9.4
 
